# dev-container

./: .coverage  .gitattributes  .gitignore  .gitmodules  Filter.py  FilterManager.py  FilterTest.py  Preprocessor.ipynb  README.md  environment.yml  filter_manager.py  filter_test.py  get_aws_session.py  pyproject.toml  requirements.txt  s3_download.py  s3_upload.py  setup.cfg  setup.py  split_image.py  supervised_push.sh  tox.ini
.devcontainer/: .bashrc  .zshrc  Dockerfile  devcontainer.json  setup_repos.sh
.github/workflows/: tests.yml
AWSConfig/: credentials
Filtration/: FilterTest.ipynb  FilterTest.py  RegionFilter.py  requirements.txt
filtration/: filter.py  filter_manager.py  filter_test.py  get_aws_session.py  split_image.py
src/filtration/: __init__.py  filter.py  filter_manager.py  filter_test.py
tests/: test_filter.py
