[metadata]
name = filtration
version = 0.0.1
author = Adin Solomon
author_email = adinbsolomon@gmail.com
description = testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Digital-Pathology/Filtration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    opencv-python
    numpy
    matplotlib
    matplotlib-inline
    boto3

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.packages.find]
where = src

[flake8]
max-line-length = 160